--- a/public/layouts/home.html
+++ b/public/layouts/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
+<link rel="icon" type="image/png" href="{{SMART_API}}/assets/img/lima-04.svg" />
 
 <head>
   <meta charset="UTF-8">
@@ -1978,9 +1978,7 @@
 
 
                   <div class="cardSearch">
-                    <div
-                      style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;"
-                      class="imgSearch">
+                    <div class="imgSearch">
                     </div>
 
                     <div class="itemSearch" style="padding-top: 15px;">
@@ -2029,8 +2027,7 @@
                     </svg>
                     <p class="cardNumber">01</p>
                   </div>
-                  <div style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
-    margin-top: -50px;" class="cardImageRevenue">
+                  <div style="margin-top: -50px;" class="cardImageRevenue">
                   </div>
 
                   <p class="cardText">Receitas lorem ipsum sit amen dolor consec</p>
@@ -2052,8 +2049,7 @@
                     </svg>
                     <p class="cardNumber">01</p>
                   </div>
-                  <div style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
-                        margin-top: -50px;" class="cardImageRevenue">
+                  <div style="margin-top: -50px;" class="cardImageRevenue">
                   </div>
 
                   <p class="cardText">Receitas lorem ipsum sit amen dolor consec</p>
@@ -2076,8 +2072,7 @@
                     </svg>
                     <p class="cardNumber">01</p>
                   </div>
-                  <div style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
-                          margin-top: -50px;" class="cardImageRevenue">
+                  <div style="margin-top: -50px;" class="cardImageRevenue">
                   </div>
 
                   <p class="cardText">Receitas lorem ipsum sit amen dolor consec</p>
