--- a/public/layouts/conteudo.html
+++ b/public/layouts/conteudo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
+  <link rel="icon" type="image/png" href="{{SMART_API}}/assets/img/lima-04.svg" />
   <title>Conteudo</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -656,7 +656,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script>
-    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
+
     $.ajax({
       type: "POST",
       url: mainHost + '/getByTableName',
