--- a/public/layouts/cores.html
+++ b/public/layouts/cores.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cores</title>
-  <link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
+  <link rel="icon" type="image/png" href="{{SMART_API}}/assets/img/lima-04.svg" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -2516,9 +2516,9 @@
               banners[0] = banners[0]
             } else {
               if (banners[0].indexOf("C:") > -1) {
-                banners[0].replace("C:\\fakepath\\", "https://api-smart-939610cb57d8.herokuapp.com/images/" + localStorage.MASTER_ID + "/")
+                banners[0].replace("C:\\fakepath\\", "{{SMART_API}}/images/" + localStorage.MASTER_ID + "/")
               } else {
-                banners[0] = "https://api-smart-939610cb57d8.herokuapp.com/images/" + localStorage.MASTER_ID + "/" + banners[0]
+                banners[0] = "{{SMART_API}}/images/" + localStorage.MASTER_ID + "/" + banners[0]
               }
 
             }
@@ -2526,9 +2526,9 @@
               banners[1] = banners[1]
             } else {
               if (banners[1].indexOf("C:") > -1) {
-                banners[1].replace("C:\\fakepath\\", "https://api-smart-939610cb57d8.herokuapp.com/images/" + localStorage.MASTER_ID + "/")
+                banners[1].replace("C:\\fakepath\\", "{{SMART_API}}/images/" + localStorage.MASTER_ID + "/")
               } else {
-                banners[1] = "https://api-smart-939610cb57d8.herokuapp.com/images/" + localStorage.MASTER_ID + "/" + banners[1]
+                banners[1] = "{{SMART_API}}/images/" + localStorage.MASTER_ID + "/" + banners[1]
               }
 
             }
@@ -2607,7 +2607,7 @@
     function hideModal() {
       $("modalProductSelect").hide()
     }
-    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
+
     const dropzones = document.querySelectorAll('.dropzone');
 
     function showModalSearch(elemento) {
@@ -3264,15 +3264,15 @@
           let elemento2 = $("#" + element.attr("dinamicId"))
           //console.log('o elemento 2',elemento2)
 
-          //console.log(`${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          //console.log(`${data.path?.replace('./public', mainHost+ ')}`)
 
 
-          elemento2.attr("src", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
-          elemento2.attr("newValue", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          elemento2.attr("src", `${data.path?.replace('./public', mainHost + ')}`)
+          elemento2.attr("newValue", `${data.path?.replace('./public', mainHost + ')}`)
           window.parent.atualizaCampo(elemento2, 0)
 
           setTimeout(() => {
-            elemento2.attr("src", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+            elemento2.attr("src", `${data.path?.replace('./public', mainHost + ')}`)
           }, 2000)
 
 
@@ -3306,19 +3306,20 @@
 
           //// //console.log('o alvo pricipal -> ',$("#"+element.attr("target"))) 
 
-          // $("#input-file").css("background","url("+data.path?.replace('./public','https://api-smart-939610cb57d8.herokuapp.com')+")")
-          ////console.log(`${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          // $("#input-file").css("background","url("+data.path?.replace('./public',mainHost+ ')+")")
+          ////console.log(`${
+              data.path?.replace('./public', mainHost + ')}`)
 
 
-          $(".LOGO_PRINCIPAL").attr("src", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
-          $(".LOGO_PRINCIPAL").attr("newValue", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          $(".LOGO_PRINCIPAL").attr("src", `${data.path?.replace('./public', mainHost + ')}`)
+          $(".LOGO_PRINCIPAL").attr("newValue", `${data.path?.replace('./public', mainHost + ')}`)
           window.parent.atualizaCampo($(".LOGO_PRINCIPAL"), 0)
 
           setTimeout(() => {
-            $(".LOGO_PRINCIPAL").attr("src", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+                $(".LOGO_PRINCIPAL").attr("src", `${data.path?.replace('./public', mainHost + ')}`)
           }, 2000)
           // let dataL = JSON.parse(localStorage.IN_EDIT_LOJA)
-          // dataL['affiliates_business_photo'] = data.path?.replace('./public','https://api-smart-939610cb57d8.herokuapp.com')
+          // dataL['affiliates_business_photo'] = data.path?.replace('./public',mainHost+ ')
           // localStorage.IN_EDIT_LOJA = JSON.stringify(dataL)
 
 
@@ -3389,11 +3390,11 @@
     function getButton(objeto, elementId) {
       ////console.log(objeto)
       let html = `
- 
-      <div class="row containerButtons superBorder"  >
+
+                  < div class= "row containerButtons superBorder" >
         <button onclick="ajustaModalDinamica($(this))"  data-bs-toggle="modal" data-bs-target="#modalChangePicture2" class="botaoExperto">${objeto.texto1}</button>
         <button onclick="chamaLinkAltera($(this),'${elementId}')" class="botaoExperto">${objeto.texto2}</button>
-      </div>      
+      </div >
       `
       return html
     }
