--- a/public/layouts/page_blank.html
+++ b/public/layouts/page_blank.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
+  <link rel="icon" type="image/png" href="{{SMART_API}}/assets/img/lima-04.svg" />
   <title>Document</title>
   <link rel="icon" type="image/png" href="../assets/img/lima-04.svg" />
 </head>
@@ -856,7 +856,7 @@
       </div>
     </div>
   </div>
-  <script src="https://api-smart-939610cb57d8.herokuapp.com/js/tinymce.js"></script>
+  <script src="{{SMART_API}}/js/tinymce.js"></script>
   <script>
     function iniciaEditorHtml(idElemento) {
       tinymce.init({
