--- a/public/layouts/receita_interna.html
+++ b/public/layouts/receita_interna.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
+  <link rel="icon" type="image/png" href="{{SMART_API}}/assets/img/lima-04.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="icon" type="image/png" href="../assets/img/lima-04.svg" />
@@ -1103,9 +1103,9 @@
       </div>
     </div>
   </div>
-  <!-- <script src="https://api-smart-939610cb57d8.herokuapp.com/js/tinymce.js"></script> -->
+  <!-- <script src="{{SMART_API}}/js/tinymce.js"></script> -->
   <script>
-    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
+
 
     let url = window.location.href
 
@@ -1288,12 +1288,12 @@
         type: 'PUT',
         success: function (data) {
           //console.log(data)
-          $("#" + element.attr("target")).css("background", `url(${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')})`)
-          $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          $("#" + element.attr("target")).css("background", `url(${data.path?.replace('./public', mainHost + ')})`)
+          $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', mainHost + ')}`)
           $("#" + element.attr("target")).css("background-size", "cover !important")
           $("#" + element.attr("target")).css("background-position", "center !important")
           $("#" + element.attr("target")).css("zoom", "100% !important")
-          editRevenue('banner_topo', data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com'))
+          editRevenue('banner_topo', data.path?.replace('./public', mainHost + '))
         },
         error: function (data) { },
         complete: function () { },
@@ -1316,8 +1316,9 @@
         type: 'PUT',
         success: function (data) {
           //console.log(data)
-          $("#" + element.attr("target")).css("background", `url(${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')})`)
-          $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          $("#" + element.attr("target")).css("background", `url(${
+            data.path?.replace('./public', mainHost + ')})`)
+          $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', mainHost + ')}`)
           $("#" + element.attr("target")).css("background-size", "cover !important")
           $("#" + element.attr("target")).css("background-position", "center !important")
           $("#" + element.attr("target")).css("zoom", "100% !important")
@@ -1325,10 +1326,10 @@
 
           function editRevenue(column, newValue) {
 
-            //console.log(element.parent().parent().find('input'))
-            //console.log(`${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+                //console.log(element.parent().parent().find('input'))
+                //console.log(`${data.path?.replace('./public', mainHost+ ')}`)
 
-            editRevenue('banner_topo', data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com'))
+                editRevenue('banner_topo', data.path?.replace('./public', mainHost + '))
 
 
             localStorage.SEARCH_REVENUES = JSON.stringify(data)
@@ -1347,7 +1348,7 @@
 
       for (const k in dados) {
         let html = `
-            <div class="itemLista itemProd row">
+              < div class= "itemLista itemProd row" >
               <div class="col-md-2">
                 <img style="margin: auto;max-width: 50px; max-height: 50px" src="${dados[k].product_thumbnail}" />
               </div>
@@ -1361,9 +1362,9 @@
               </div>
               <div class="col-md-2">
                 <button onclick="addContent(${dados[k].product_code})" style="margin: auto; background: #f6b504; border-radius: 20px" class="btn btn-info">Adicionar</div>
-              </div>
-            </div>
-          `;
+              </div >
+            </div >
+              `;
         container.append(html)
       }
     }
@@ -1417,7 +1418,7 @@
       let ID = $(".itemProduto").length + 1
       let html =
         `
-         <div class="col-md-12 itemProduto">
+              < div class= "col-md-12 itemProduto" >
                   <div style="border-bottom: 0.949999988079071px solid #EDF2F6;" class="row">
                     <div style="margin: auto;" class="col-md-1">
                       <div class="row">
@@ -1517,8 +1518,8 @@
 
                   </div>
 
-                </div>
-      `
+                </div >
+              `
       $(".conteudo").append(html)
       let myIngredient = {
         product_code: productData.product_code,
@@ -1568,7 +1569,7 @@
     function editaMidia(element, active) {
       let MIDIA = { active: active[0].checked, url: element.val() }
 
-      $("#previewMidia").css("background", `url(${getThumb(element.val())})`)
+      $("#previewMidia").css("background", `url(${ getThumb(element.val())})`)
       editRevenue('midia', JSON.stringify(MIDIA))
     }
 
