--- a/public/layouts/receitas.html
+++ b/public/layouts/receitas.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
+  <link rel="icon" type="image/png" href="{{SMART_API}}/assets/img/lima-04.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -989,10 +989,10 @@
   </div>
 </body>
 
-<script src="https://api-smart-939610cb57d8.herokuapp.com/js/tinymce.js"></script>
+<script src="{{SMART_API}}/js/tinymce.js"></script>
 <script>
 
-  var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
+
   let url = window.location.href
   if (url.indexOf("receita") > -1) {
     function iniciaEditorHtml(idElemento) {
@@ -1010,7 +1010,7 @@
 
 
 
-  var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
+
 
 
   function iniciaEditorHtml(idElemento) {
@@ -1493,8 +1493,8 @@
         type: 'PUT',
         success: function (data) {
           //console.log(data)
-          $("#" + element.attr("target")).css("background", `url(${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')})`)
-          $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          $("#" + element.attr("target")).css("background", `url(${data.path?.replace('./public', mainHost + ')})`)
+          $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', mainHost + ')}`)
           $("#" + element.attr("target")).css("background-size", "cover !important")
           $("#" + element.attr("target")).css("background-position", "center !important")
           $("#" + element.attr("target")).css("zoom", "100% !important")
@@ -1502,7 +1502,7 @@
 
 
           //console.log(element.parent().parent().find('input'))
-          //console.log(`${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+          //console.log(`${data.path?.replace('./public', mainHost+ ')}`)
 
 
 
@@ -1786,8 +1786,9 @@
       type: 'PUT',
       success: function (data) {
         //console.log(data)
-        $("#" + element.attr("target")).css("background", `url(${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')})`)
-        $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+        $("#" + element.attr("target")).css("background", `url(${
+            data.path?.replace('./public', mainHost + ')})`)
+        $("#" + element.attr("target")).attr("value", `${data.path?.replace('./public', mainHost + ')}`)
         $("#" + element.attr("target")).css("background-size", "cover !important")
         $("#" + element.attr("target")).css("background-position", "center !important")
         $("#" + element.attr("target")).css("zoom", "100% !important")
@@ -1795,7 +1796,7 @@
 
 
         //console.log(element.parent().parent().find('input'))
-        //console.log(`${data.path?.replace('./public', 'https://api-smart-939610cb57d8.herokuapp.com')}`)
+        //console.log(`${data.path?.replace('./public', mainHost+ ')}`)
 
 
 
