--- a/views/cms_promocoes.handlebars
+++ b/views/cms_promocoes.handlebars
@@ -1217,7 +1217,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "https://api-smart-939610cb57d8.herokuapp.com/getLogsPromotional",
+                    url: "{{SMART_API}}/getLogsPromotional",
 
                     headers: {
                         "x-access-token": localStorage.token,
