--- a/views/step9_startup.handlebars
+++ b/views/step9_startup.handlebars
@@ -79,7 +79,7 @@
 
 
         $.ajax({
-            url: 'https://api-smart-939610cb57d8.herokuapp.com/myColors',
+            url: mainHost + '/myColors',
             headers: {
                 "x-access-token": localStorage.token,
                 "affiliate_id": localStorage.AFFILIATE_ID,
@@ -97,7 +97,7 @@
                 data1 = data
 
                 localStorage.colors = JSON.stringify(data)
-                $(".imgSrc").css("background", "url(https://api-smart-939610cb57d8.herokuapp.com/images/" + localStorage.MASTER_ID + "/" + localStorage.nameLogo + ")")
+                $(".imgSrc").css("background", "url({{SMART_API}}/images/" + localStorage.MASTER_ID + "/" + localStorage.nameLogo + ")")
                 //console.log(("background","rgb( "+data[0]._rgb[0]+","+data[0]._rgb[1]+","+data[0]._rgb[2]+","+data[0]._rgb[3]+") 0% 0% no-repeat padding-box "))
                 $("#01").css("background", "rgb(" + data[0]._rgb[0] + "," + data[0]._rgb[1] + "," + data[0]._rgb[2] + "," + data[0]._rgb[3] + ") 0% 0% no-repeat padding-box ")
                 $("#02").css("background", "rgb(" + data[1]._rgb[0] + "," + data[1]._rgb[1] + "," + data[1]._rgb[2] + "," + data[1]._rgb[3] + ") 0% 0% no-repeat padding-box  ")
